# learnopengl

./: .clang-format  meson.build  test  test.cpp
common/: glad.c
coordinate-systems/: meson.build
coordinate-systems/exercises/ex1/: main.cpp
coordinate-systems/exercises/ex2/: main.cpp
coordinate-systems/exercises/ex3/: main.cpp
coordinate-systems/src/: Shader.cpp  main.cpp
coordinate-systems/src/headers/: quit.h
getting_started/camera/: meson.build
getting_started/camera/exercises/ex1/: Camera.cpp
getting_started/camera/exercises/ex2/: Camera.cpp
getting_started/camera/src/: Shader.cpp  main.cpp
getting_started/camera/src/headers/: Shader.hpp  quit.hpp
getting_started/coordinate-systems/: meson.build
getting_started/coordinate-systems/exercises/ex1/: main.cpp
getting_started/coordinate-systems/exercises/ex2/: main.cpp
getting_started/coordinate-systems/exercises/ex3/: main.cpp
getting_started/coordinate-systems/shaders/: shader.vert
getting_started/coordinate-systems/src/: main.cpp
getting_started/hello_triangle/exercises/ex2/: ex2.cpp
getting_started/hello_triangle/exercises/ex3/: ex3.cpp
getting_started/hello_triangle/src/: triangle.cpp
getting_started/shaders/: meson.build
getting_started/shaders/ex2/shaders/: shader.vs
getting_started/shaders/ex2/src/: quit.cpp
getting_started/shaders/shaders/: shader.vs
getting_started/shaders/shaders/ex3/: shader.fs  shader.vs
getting_started/textures/: meson.build
getting_started/textures/exercises/ex4/: main.cpp
getting_started/textures/shaders/: shader.vs
getting_started/textures/shaders/ex1/: shader.fs
getting_started/textures/src/: Shader.cpp  main.cpp
getting_started/transformations/shaders/: shader.fs  shader.vs
hello_triangle/: meson.build
hello_triangle/exercises/ex1/: ex1.cpp
hello_triangle/src/: rectangle.cpp
lighting/colors/: meson.build
lighting/colors/src/: Camera.cpp  Shader.cpp  error_handling.cpp  main.cpp
lighting/colors/src/headers/: Camera.hpp  Shader.hpp  error_handling.hpp
lighting/colors/src/shaders/: lighting_shader.frag  shader.frag  shader.vert
shaders/ex2/shaders/: shader.fs
shaders/ex2/src/: Shader.cpp  main.cpp
shaders/shaders/ex1/: shader.vs
shaders/src/: Shader.cpp  main.cpp
shaders/src/headers/: Shader.h  error_handling.h
src/: main.cpp
src/headers/glad/: glad.h
src/hello_triangle/: meson.build  rectangle.cpp
textures/: meson.build
textures/exercises/ex2/: main.cpp
textures/exercises/ex3/: main.cpp
textures/shaders/: shader.fs
textures/shaders/ex4/: shader.fs
textures/src/: Shader.cpp
transformations/: meson.build
transformations/exercises/ex1/: main.cpp
transformations/exercises/ex2/: main.cpp
transformations/shaders/: shader.vs
transformations/src/: error_handling.cpp  main.cpp
transformations/src/headers/: Shader.h
